--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,32 @@
 spring:
+  #H2 DB connection
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/CDMDEV
-    username: root
+    url: jdbc:h2:mem:mydb
+    username: sa
     password: password
+    driverClassName: org.h2.Driver
   jpa:
-    hibernate.ddl-auto: update
-    generate-ddl: true
-    show-sql: true
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings.trace: false
+      settings.web-allow-others: false
 
-    spring:
-      jackson:
-        property-naming-strategy: SNAKE_CASE
+#mysql db connection
+#  datasource:
+#    driverClassName: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://127.0.0.1:3306/CDMDEV
+#    username: root
+#    password: password
+#  jpa:
+#    hibernate.ddl-auto: update
+#    generate-ddl: true
+#    show-sql: true
+
+#  jackson:
+#    property-naming-strategy: SNAKE_CASE
 
 logging:
   level:
