--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,15 +1,18 @@
 spring:
-  profiles:
-    active: local
-  datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/CDMDEV
-    username: root
-    password: password
-  jpa:
-    hibernate.ddl-auto: update
-    generate-ddl: true
-    show-sql: true
+#H2 DB connection
+datasource:
+  url: jdbc:h2:mem:mydb
+  username: sa
+  password: password
+  driverClassName: org.h2.Driver
+jpa:
+  spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+h2:
+  console:
+    enabled: true
+    path: /h2-console
+    settings.trace: false
+    settings.web-allow-others: false
 
 server:
   port: 8090
