--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,12 +7,20 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-      generate-ddl: false
-      show-sql: true
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+    properties:
+      hibernate:
+        show-sql: true
+#        format_sql: true
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.springframework.web: ERROR
 
 customer:
   id:
     fetch: CUS
+
